--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@coreui/coreui-free-react-admin-template",
-  "version": "2.1.2",
+  "name": "AstrolabWeb - UI",
+  "version": "0.0.1",
   "description": "CoreUI React Open Source Bootstrap 4 Admin Template",
   "author": "Łukasz Holeczek",
   "homepage": "https://coreui.io",
