Some login logic

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AstrolabWeb - UI",
+  "name": "AstrolabWebUI",
   "version": "0.0.1",
   "description": "CoreUI React Open Source Bootstrap 4 Admin Template",
   "author": "Łukasz Holeczek",
